# openapi/spec/openapi.yaml
@@ -33,15 +33,65 @@ paths:
             format: int32
       responses:
         '200':
-          description: |
-            200 response
+          description: 200 response
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Member'
-        '404':
+        '500':
           description: |
-            404 response
+            Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /roles:
+    get:
+      operationId: get_roles
+      summary: get roles
+      responses:
+        '200':
+          description:
+            Successful response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Role'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /roles/{role_id}:
+    get:
+      operationId: get_roles_role_id
+      summary: get a role
+      parameters:
+        - name: role_id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Role'
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: |
+            Internal Server Error
           content:
             application/json:
               schema:
@@ -69,5 +119,20 @@ components:
           format: int32
         name:
           description: name of the member
+          type: string
+      required: [id, name]
+    Role:
+      description: member
+      type: object
+      properties:
+        id:
+          description: role id
+          type: integer
+          format: int32
+        name:
+          description: name of the role
+          type: string
+        emoji:
+          description: emoji icon key of the role (e.g. '+1', 'tada')
           type: string
       required: [id, name]
